# cpp-app-template

./: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
src/: main.cpp
vcpkg-registry/ports/my-lib/0.1.0/: portfile.cmake  vcpkg.json
vcpkg-registry/versions/: baseline.json
vcpkg-registry/versions/m-/: my-lib.json
